--- a/src/config/config_meta.yml
+++ b/src/config/config_meta.yml
@@ -1,6 +1,6 @@
 ---
 model_name: 'bert_qa'  # bert_qa, bert_passage, bert_base
-test_year: 'tdqfs'  # 2005, 2006, 2007, tdqfs
+test_year: '2007'  # 2005, 2006, 2007, tdqfs
 grain: 'sent'  # sent, passage, passage_4
 
 mode: 'train'  # train, rank_sent, select_sent
